@@ -309,7 +309,7 @@ else {
 		$interfaces[$interface['interfaceid']] = $interface;
 	}
 	zbx_add_post_js('hostInterfacesManager.add('.CJs::encodeJson($interfaces).');');
-	zbx_add_post_js('hostInterfacesManager.disable()');
+	zbx_add_post_js('hostInterfacesManager.disable();');
 
 	// table for agent interfaces with footer
 	$ifTab = new CTable(null, 'formElementTable');
