@@ -344,7 +344,7 @@ if(isset($_REQUEST['sform'])){
 
 		$maxid = ($maxid<$id)?$id:$maxid;
 	}
-	zbx_add_post_js('logexpr_count='.($maxid+1));
+	zbx_add_post_js('logexpr_count='.($maxid+1).';');
 
 	$maxid=0;
 	foreach($keys as $id => $val){
@@ -358,7 +358,7 @@ if(isset($_REQUEST['sform'])){
 
 		$maxid = ($maxid<$id)?$id:$maxid;
 	}
-	zbx_add_post_js('key_count='.($maxid+1));
+	zbx_add_post_js('key_count='.($maxid+1).';');
 
 	$frmTRLog->addRow(SPACE, $keyTable);
 	$frmTRLog->addRow(SPACE, $table);
